# crewai-multiagent-systems-training

customer_outreach_campaign/: README.md  pyproject.toml  report.md
customer_outreach_campaign/src/customer_outreach_campaign/: crew.py  main.py
customer_outreach_campaign/src/customer_outreach_campaign/config/: agents.yaml  tasks.yaml
customer_outreach_campaign/src/customer_outreach_campaign/tools/: custom_tool.py
customer_support_automation/: report.md
customer_support_automation/src/customer_support_automation/: crew.py  main.py
customer_support_automation/src/customer_support_automation/config/: agents.yaml  tasks.yaml
event_planning/: README.md  marketing_report.md  pyproject.toml  venue_details.json
event_planning/src/event_planning/: crew.py  main.py
event_planning/src/event_planning/config/: agents.yaml  tasks.yaml
event_planning/src/event_planning/tools/: custom_tool.py
financial_analysis_collab/: README.md  pyproject.toml  risk_assessment_report.md
financial_analysis_collab/src/financial_analysis_collab/: crew.py  main.py
financial_analysis_collab/src/financial_analysis_collab/config/: agents.yaml  tasks.yaml
latest_ai_development/: report.md
latest_ai_development/src/latest_ai_development/config/: agents.yaml
send_marketing_emails/: README.md  email_addresses.txt  pyproject.toml
send_marketing_emails/db/: chroma.sqlite3
send_marketing_emails/src/send_marketing_emails/: crew.py  main.py
send_marketing_emails/src/send_marketing_emails/config/: agents.yaml  tasks.yaml
send_marketing_emails/src/send_marketing_emails/tools/: linkedin_api_tool.py
send_personalized_emails/: .env (sample)  .gitignore  custom_functions.py  package-lock.json  requirements.txt  send_marketing_emails.py  websites.txt
send_personalized_emails/api/: index.py
send_personalized_emails/api/src/: send_personalized_emails.py
send_personalized_emails/data/: AIA Sales Hacker.docx
tailor_job_applications/: README.md  interview_materials.md  pyproject.toml  tailored_resume.md
tailor_job_applications/db/: chroma.sqlite3
tailor_job_applications/src/tailor_job_applications/: crew.py  main.py
tailor_job_applications/src/tailor_job_applications/config/: agents.yaml  tasks.yaml
