[project]
name = "customer_outreach_campaign"
version = "0.1.0"
description = "customer-outreach-campaign using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
customer_outreach_campaign = "customer_outreach_campaign.main:run"
run_crew = "customer_outreach_campaign.main:run"
train = "customer_outreach_campaign.main:train"
replay = "customer_outreach_campaign.main:replay"
test = "customer_outreach_campaign.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
