[project]
name = "financial_analysis_collab"
version = "0.1.0"
description = "financial-analysis-collab using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
financial_analysis_collab = "financial_analysis_collab.main:run"
run_crew = "financial_analysis_collab.main:run"
train = "financial_analysis_collab.main:train"
replay = "financial_analysis_collab.main:replay"
test = "financial_analysis_collab.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
